[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://system/menus/save_load_popup.gd" type="Script" id=2]

[node name="PopupPanel" type="PopupPanel"]
margin_right = 545.0
margin_bottom = 231.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 524.0
margin_bottom = 210.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 519.0
margin_bottom = 65.0
text = "GAME_GENERIC_SAVE
"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 519.0
margin_bottom = 205.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 519.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveNewGameButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 519.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "GAME_GENERIC_NEW_SAVE"
flat = true

[node name="SaveGameButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 519.0
margin_bottom = 24.0

[node name="OverwriteConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 537.0
margin_bottom = 223.0
window_title = ""
dialog_text = "GAME_GENERIC_CONFIRM_SAVE_OVERWRITE"
